<resources>
    <string name="app_name">To Do List</string>
    <string name="title_todolist">To Do List</string>
    <string name="btn_new_task">+ New Task</string>
    <string name="content_description">Content Description</string>
    <string name="task_description">This note still process</string>
    <string name="category_name">Category</string>
    <string name="search_task">Search task .... </string>
    <string name="task_detail">Task Detail</string>
    <string name="task_title">Task Title</string>
    <string name="category">Category Name</string>
    <string name="add_category">Add Category</string>
    <string name="category_all">All</string>
    <string name="enter_your_task_here">Enter your task here ....</string>
    <string name="save">Save</string>
    <string name="btn_save">Save\n</string>
</resources>