<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/category_name"
            android:inputType="text"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageButton
            android:id="@+id/btnEditCategory"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/baseline_edit_24"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/content_description"/>

        <ImageButton
            android:id="@+id/btnDeleteCategory"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/content_description"
            android:src="@drawable/baseline_delete_24" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAddCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_category"
        android:backgroundTint="@color/green_tosca"
        app:cornerRadius="8dp"
        android:layout_marginTop="16dp"/>
</LinearLayout>